tests/tests/ui/named-enum-field.stderr
error: named enum variants are not supported

         = help: use unnamed variant

 --> tests/ui/named-enum-field.rs:5:5
  |
5 | /     NotSupported {
6 | |         value: f32,
7 | |     }
  | |_____^
